--- a/css/index.css
+++ b/css/index.css
@@ -65,7 +65,7 @@
 	color:#F07000;
 }
 
-.repeat
+.repeat, .dust
 {
 	height:30px;
 	width:35px;
@@ -73,4 +73,14 @@
 
 .btn:focus {
   outline: none;
+}
+
+.smallDust
+{
+	height:14px;
+}
+
+.largeDust
+{
+	height:20px;
 }
