--- a/css/index.css
+++ b/css/index.css
@@ -11,28 +11,39 @@
 
 #iconsParent
 {
-	text-align:right;
+	text-align:center;
 }
 
-#textInput, #buttons
+#languageSelect
 {
-	padding:10px;
+	width:20%;
+	max-width:68px;
+}
+
+#acronym
+{
+	width:80%;
+}
+
+.nopadding {
+   padding-left: 0;
+	 padding-right: 0;
+}
+
+.input-group
+{
+	width:100%;
+}
+
+#buttons, #launchButtonParent
+{
+	padding-top:10px;
+	height:39.11px;
 }
 
 #classIcons
 {
   display:inline-block;
-}
-
-#languageSelect
-{
-	display:inline!important;
-	width:70px;
-}
-
-#launchButton
-{
-	display:inline!important;
 }
 
 #footer
@@ -83,11 +94,4 @@
 .largeDust
 {
 	height:20px;
-}
-
-.timer
-{
-	font-style:oblique;
-	color:black;
-	float:right;
 }
