--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,11 @@
-.classIcon
+.classIcon, #format
 {
-	height:50px;
-	width:50px;
+    height:50px;
+}
+
+#format
+{
+    padding-left: 20px;
 }
 
 .classIcon:hover
