--- a/css/index.css
+++ b/css/index.css
@@ -80,7 +80,18 @@
 	color:#F07000;
 }
 
-.repeat, .dust
+.mana
+{
+	padding-left:7px;
+}
+
+.repeat
+{
+	padding-left:9px;
+	padding-top:6px;
+}
+
+.repeat, .dust, .mana, .copy
 {
 	height:30px;
 	width:35px;
@@ -105,4 +116,9 @@
 	float:right;
 	color:black;
 	font-style:oblique;
+}
+
+span.glyphicon-repeat, span.glyphicon-copy
+{
+    font-size: 1.4em;
 }
